--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
-
-  <div class="banner">
+  <div class="banner text-center">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
     <div class="banner-content text-center max-length">
       <div>
         <h1 class="nina push-0">Space & Time Explorer Person</h1>
-        <p class="tera bold">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <p class="tera ">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
