--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="banner text-center">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
-    <div class="banner-content text-center max-length">
+    <div class="banner-content text-center max-length gutter-quarter">
       <div>
         <h1 class="nina push-0">Space & Time Explorer Person</h1>
         <p class="tera ">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
